updating react build for ghpages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "jersey_history",
+  "homepage": "https://dhackelman.github.io/jersey_history/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,12 +10,15 @@
     "save": "^2.3.2"
   },
   "devDependencies": {
+    "gh-pages": "^1.2.0",
     "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
